// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FilterChips > (Snapshot) renders multi-select mode 1`] = `
<div
  aria-label="Filter options"
  class="flex flex-wrap gap-2"
  data-testid="filter-chips"
  role="group"
>
  <button
    aria-checked="true"
    class="border-border inline-flex cursor-pointer items-center justify-center rounded-full border-(length:--border-width) px-3 py-1 text-sm font-medium transition-colors bg-foreground text-background"
    role="checkbox"
    type="button"
  >
    All
  </button>
  <button
    aria-checked="true"
    class="border-border inline-flex cursor-pointer items-center justify-center rounded-full border-(length:--border-width) px-3 py-1 text-sm font-medium transition-colors bg-foreground text-background"
    role="checkbox"
    type="button"
  >
    Streaming
  </button>
  <button
    aria-checked="false"
    class="border-border inline-flex cursor-pointer items-center justify-center rounded-full border-(length:--border-width) px-3 py-1 text-sm font-medium transition-colors text-foreground hover:bg-foreground/10 bg-transparent"
    role="checkbox"
    type="button"
  >
    Metadata
  </button>
</div>
`;

exports[`FilterChips > (Snapshot) renders single-select mode 1`] = `
<div
  aria-label="Filter options"
  class="flex flex-wrap gap-2"
  data-testid="filter-chips"
  role="radiogroup"
>
  <button
    aria-checked="true"
    class="border-border inline-flex cursor-pointer items-center justify-center rounded-full border-(length:--border-width) px-3 py-1 text-sm font-medium transition-colors bg-foreground text-background"
    role="radio"
    type="button"
  >
    All
  </button>
  <button
    aria-checked="false"
    class="border-border inline-flex cursor-pointer items-center justify-center rounded-full border-(length:--border-width) px-3 py-1 text-sm font-medium transition-colors text-foreground hover:bg-foreground/10 bg-transparent"
    role="radio"
    type="button"
  >
    Streaming
  </button>
  <button
    aria-checked="false"
    class="border-border inline-flex cursor-pointer items-center justify-center rounded-full border-(length:--border-width) px-3 py-1 text-sm font-medium transition-colors text-foreground hover:bg-foreground/10 bg-transparent"
    role="radio"
    type="button"
  >
    Metadata
  </button>
</div>
`;
